Added JavaScript files

--- a/adoptionRequestsListUser.html
+++ b/adoptionRequestsListUser.html
@@ -27,12 +27,40 @@
                 <a href="favouritePet.html">
                     <img src="assets/svg/heart.svg" class="heart" alt="" style="width: 2em;">
                 </a>
-                <button>
+                <button id="toggle-menu">
                     <img src="assets/svg/menu.svg" class="menu" alt="" style="width: 2em;">
                 </button>
             </div>
         </div>
     </header>
+
+    <nav class="container-menu">
+        <button id="close-menu" class="close-menu">
+            <img src="assets/svg/xcircle.svg" class="menu" alt="" style="width: 2em;">
+        </button>
+        <ul class="container-inner-menu">
+            <li>
+                <a href="index.html">
+                    Inicio
+                </a>
+            </li>
+            <li>
+                <a href="profileUserEdit.html">
+                    Perfil
+                </a>
+            </li>
+            <li>
+                <a href="adoptionRequestsListUser.html">
+                    Solicitudes
+                </a>
+            </li>
+            <li>
+                <a href="index.html">
+                    Cerrar sesión
+                </a>
+            </li>
+        </ul>
+    </nav>
 
     <main>
         <div class="top-adoption">
@@ -52,68 +80,13 @@
                     <p>13/04/2021</p>
                 </div>
                 <div class="d-flex flex-column">
-                    <p class="josefinsans-chetwode-blue-18px">NOMBRE DEL ADOPTANTE</p>
-                    <p>Victoria Robertson</p>
+                    <p class="josefinsans-chetwode-blue-18px">NOMBRE DEL REFUGIO</p>
+                    <a href="profileShelter.html">Refugio San Gregorio</a>
                 </div>
+                <br>
                 <div class="d-flex flex-column">
                     <p class="josefinsans-chetwode-blue-18px">ESTATUS</p>
                     <p>Activa.</p>
-                </div>
-                <div class="d-flex flex-column">
-                    <p class="josefinsans-chetwode-blue-18px">FORMULARIO DE ADOPCIÓN</p>
-                    <p class="question">¿Actualmente tienes
-                        animales?</p>
-                    <p>Sí.</p>
-                    <p class="question">¿Cuáles?</p>
-                    <p>Un perro.</p>
-                    <p class="question">¿Anteriormente has
-                        tenido otros animales?</p>
-                    <p>Sí, un gato.</p>
-                    <p class="question">¿Qué fue lo que
-                        pasó con ellos?</p>
-                    <p>Falleció por cáncer.</p>
-                    <p class="question">¿Todas las personas
-                        en
-                        casa están de acuerdo en adoptar?</p>
-                    <p>Sí.</p>
-                    <p class="question">
-                        Si
-                        por algún motivo
-                        tuvieras que cambiar de domicilio, ¿qué pasaría con el adoptado?
-                    </p>
-                    <p>Buscaría un departamento donde acepten mascotas para llevarlo conmigo.</p>
-                    <p class="question">
-                        ¿Cuántos años crees
-                        que
-                        vive un perro o gato en promedio?
-                    </p>
-                    <p>15 años.</p>
-                    <p class="question">
-                        ¿Dónde dormirá el
-                        adoptado?
-                    </p>
-                    <p>Conmigo.</p>
-                    <p class="question">
-                        ¿Cuánto tiempo
-                        pasará
-                        solo?
-                    </p>
-                    <p>Tal vez una hora diaria.</p>
-                    <p class="question">
-                        En caso de tener
-                        empleados domésticos, ¿ellos están al tanto de los cuidados de un animal?
-                    </p>
-                    <p>No tengo.</p>
-                    <p class="question">
-                        ¿Quién será el
-                        responsable y se hará cargo de cubrir los gastos del adoptado?
-                    </p>
-                    <p>Yo.</p>
-                    <p class="question">
-                        ¿Tienes un médico
-                        veterinario de cabecera?
-                    </p>
-                    <p>Sí.</p>
                 </div>
             </div>
             <button type="button" class="collapsible container-fluid d-flex align-items-center justify-content-between">
@@ -127,68 +100,13 @@
                     <p>13/04/2021</p>
                 </div>
                 <div class="d-flex flex-column">
-                    <p class="josefinsans-chetwode-blue-18px">NOMBRE DEL ADOPTANTE</p>
-                    <p>Victoria Robertson</p>
+                    <p class="josefinsans-chetwode-blue-18px">NOMBRE DEL REFUGIO</p>
+                    <a href="profileShelter.html">Refugio San Gregorio</a>
                 </div>
+                <br>
                 <div class="d-flex flex-column">
                     <p class="josefinsans-chetwode-blue-18px">ESTATUS</p>
                     <p>Activa.</p>
-                </div>
-                <div class="d-flex flex-column">
-                    <p class="josefinsans-chetwode-blue-18px">FORMULARIO DE ADOPCIÓN</p>
-                    <p class="question">¿Actualmente tienes
-                        animales?</p>
-                    <p>Sí.</p>
-                    <p class="question">¿Cuáles?</p>
-                    <p>Un perro.</p>
-                    <p class="question">¿Anteriormente has
-                        tenido otros animales?</p>
-                    <p>Sí, un gato.</p>
-                    <p class="question">¿Qué fue lo que
-                        pasó con ellos?</p>
-                    <p>Falleció por cáncer.</p>
-                    <p class="question">¿Todas las personas
-                        en
-                        casa están de acuerdo en adoptar?</p>
-                    <p>Sí.</p>
-                    <p class="question">
-                        Si
-                        por algún motivo
-                        tuvieras que cambiar de domicilio, ¿qué pasaría con el adoptado?
-                    </p>
-                    <p>Buscaría un departamento donde acepten mascotas para llevarlo conmigo.</p>
-                    <p class="question">
-                        ¿Cuántos años crees
-                        que
-                        vive un perro o gato en promedio?
-                    </p>
-                    <p>15 años.</p>
-                    <p class="question">
-                        ¿Dónde dormirá el
-                        adoptado?
-                    </p>
-                    <p>Conmigo.</p>
-                    <p class="question">
-                        ¿Cuánto tiempo
-                        pasará
-                        solo?
-                    </p>
-                    <p>Tal vez una hora diaria.</p>
-                    <p class="question">
-                        En caso de tener
-                        empleados domésticos, ¿ellos están al tanto de los cuidados de un animal?
-                    </p>
-                    <p>No tengo.</p>
-                    <p class="question">
-                        ¿Quién será el
-                        responsable y se hará cargo de cubrir los gastos del adoptado?
-                    </p>
-                    <p>Yo.</p>
-                    <p class="question">
-                        ¿Tienes un médico
-                        veterinario de cabecera?
-                    </p>
-                    <p>Sí.</p>
                 </div>
             </div>
         </div>
