--- a/homeShelter.html
+++ b/homeShelter.html
@@ -56,7 +56,7 @@
                 </a>
             </li>
             <li>
-                <a href="index.html">
+                <a href="index.html" id="log-out">
                     Cerrar sesión
                 </a>
             </li>
@@ -316,6 +316,7 @@
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
     </script>
     <script src="js/main.js"></script>
+    <script src="js/profileShelter.js"></script>
 </body>
 
 </html>
