--- a/logInUser.html
+++ b/logInUser.html
@@ -22,16 +22,16 @@
     </header>
 
     <main>
-        <form action="" method="" class="group-form" id="adoption-form">
+        <form action="" method="" class="group-form" id="login-form">
             <ul class="d-flex align-content-center flex-column align-items-center justify-content-center">
                 <li>
                     <input type="email"
                         class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                        placeholder="Correo">
+                        placeholder="Correo" id="email">
                     <br>
-                    <input type="current-password"
+                    <input type="password"
                         class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                        placeholder="Contraseña">
+                        placeholder="Contraseña" id="password">
                 </li>
                 <br>
                 <input type="submit" value="Ingresar" class="button-p josefinsans-normal-white-20px button-primary">
@@ -45,6 +45,7 @@
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
     </script>
     <script src="js/main.js"></script>
+    <script src="js/logInUser.js"></script>
 </body>
 
 </html>
