--- a/profileShelter.html
+++ b/profileShelter.html
@@ -44,30 +44,26 @@
                     <img src="assets/img/shelterImage.jpg" alt="" class="shelter-image" style="width: 15em;">
                 </div>
                 <div class="info-shelter d-flex flex-column">
-                    <h2 class="josefinsans-normal-black-30px d-flex justify-content-center pb-3">Refugio San Gregorio</h2>
+                    <h2 class="shelter-name josefinsans-normal-black-30px d-flex justify-content-center pb-3">Refugio San Gregorio</h2>
                     <div class="d-flex flex-column">
                         <div class="main-info d-flex flex-wrap justify-content-between px-5">
                             <div class="location">
                                 <p class="josefinsans-chetwode-blue-18px">UBICACIÓN</p>
-                                <p>Felipe Carrillo puerto #400, Alberto Zamora, Coyoacán, 04000, CDMX.</p>
+                                <p class="location-shelter"></p>
                             </div>
                             <div class="phone">
                                 <p class="josefinsans-chetwode-blue-18px">TELÉFONO</p>
-                                <p>5523423453</p>
+                                <p class="phone-shelter"></p>
                             </div>
                             <div class="web">
                                 <p class="josefinsans-chetwode-blue-18px">WEB</p>
-                                <a href="https://refugiosangregorio.com">
-                                    <p>www.refugiosangregorio.com</p>
-                                </a>
+                                <a class="webaddress-shelter" href="" target="_blank">Link</a>
                             </div>
                         </div>
                         <div class="secondary-info d-flex flex-wrap justify-content-center px-5">
                             <div>
                                 <p class="josefinsans-chetwode-blue-18px">DETALLES</p>
-                                <p>Somos un refugio que sobrevive de donativos y ayuda de almas caritativas.
-                                    Amplios jardines, paseos, atención individualizada, cariño y supervisión continua para tu todos ellos.
-                                    Cuidamos a más de 200 perros y constantemente rescatamos a más.</p>
+                                <p class="story_shelter"></p>
                             </div>
                         </div>
                         <div class="user-actions d-flex justify-content-center pt-5">
@@ -149,7 +145,7 @@
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
     </script>
     <script src="js/main.js"></script>
-
+    <script src="js/profileShelter.js"></script>
 </body>
 
 </html>
