--- a/updatePet.html
+++ b/updatePet.html
@@ -27,94 +27,147 @@
                 <a href="adoptionRequestsListShelter.html">
                     <img src="assets/svg/clipboard.svg" class="clipboard" alt="" style="width: 2em;">
                 </a>
-                <button>
+                <button id="toggle-menu">
                     <img src="assets/svg/menu.svg" class="menu" alt="" style="width: 2em;">
                 </button>
             </div>
         </div>
     </header>
 
-    <main class="create-pet-form">
+    <nav class="container-menu">
+        <button id="close-menu" class="close-menu">
+            <img src="assets/svg/xcircle.svg" class="menu" alt="" style="width: 2em;">
+        </button>
+        <ul class="container-inner-menu">
+            <li>
+                <a href="homeShelter.html">
+                    Inicio
+                </a>
+            </li>
+            <li>
+                <a href="profileShelterEdit.html">
+                    Perfil
+                </a>
+            </li>
+            <li>
+                <a href="adoptionRequestsListShelter.html">
+                    Solicitudes
+                </a>
+            </li>
+            <li>
+                <a href="index.html">
+                    Cerrar sesión
+                </a>
+            </li>
+        </ul>
+    </nav>
+
+    <main>
         <div class="top-background">
-            <div class="background-orange"></div>
-            <div class="rectangle-background"></div>
+            <div class="rectangle-background container-fluid"></div>
             <div class="close">
-                <img onclick="goBack()" src="assets/svg/xcircle.svg" class="x-circle" alt="">
+                <img onclick="goBack()" src="assets/svg/xcircle.svg" class="x-circle" alt="" style="width: 3em;">
             </div>
         </div>
-
-        <div class="title">
-            <h1 class="josefinsans-normal-black-30px">Actualizar<br />mascota</h1>
+        <div class="create-pet-form">
+            <h1 class="title josefinsans-normal-black-30px text-center py-5">Actualizar datos<br /> de una mascota</h1>
+            <div class="d-flex justify-content-center align-content-center align-items-center">
+                <form action="" method="">
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputText"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cómo se llama?
+                        </label>
+                        <input type="text"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                    </div>
+                    <br>
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputText"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Qué tipo de
+                            mascota
+                            es?
+                        </label>
+                        <input type="text"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                    </div>
+                    <br>
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputText"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuál
+                            es su edad
+                            aproximada?
+                        </label>
+                        <input type="text"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                    </div>
+                    <br>
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputText4"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuál es su sexo?
+                        </label>
+                        <input type="text"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                    </div>
+                    <br>
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputText5"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuál es su talla
+                            aproximada?
+                        </label>
+                        <input type="text"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                    </div>
+                    <br>
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputText6"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">Cuéntanos sobre su
+                            carácter.
+                        </label>
+                        <input type="text"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                    </div>
+                    <br>
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputText7"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">Cuéntanos un poco
+                            de
+                            su historia.
+                        </label>
+                        <input type="text"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                    </div>
+                    <br>
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputText8"
+                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Requiere atención o
+                        cuidados especiales? ¿Cuáles?
+                    </label>
+                    <input type="text"
+                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                    </div>
+                    <div class="file-upload">
+                        <div class="image-upload-wrap">
+                            <input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*" />
+                            <div class="drag-text">
+                                <br>
+                                <img src="assets/svg/add.svg" alt="" style="height: 3em; width: 3em;">
+                                <h3 class="josefinsans-medium-chetwode-blue-14px">Añadir foto de la mascota</h3>
+                            </div>
+                        </div>
+                        <div class="file-upload-content">
+                            <img class="file-upload-image" src="#" alt="your image" />
+                            <div class="image-title-wrap">
+                                <button type="button" onclick="removeUpload()" class="remove-image">Borrar <span
+                                        class="image-title">Tu foto</span></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-center pt-3">
+                        <input type="submit" value="Actualizar" class="button-p josefinsans-normal-white-20px ">
+                    </div>
+                </form>
+            </div>
         </div>
-
-        <form action="" method="" class="group-form" id="create-pet">
-            <ul class="d-flex align-content-center flex-column align-items-center justify-content-center">
-                <li>
-                    <label for="inputText"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cómo se llama?
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
-                </li>
-                <br>
-                <li>
-                    <label for="inputText2"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Qué tipo de mascota es?
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
-                </li>
-                <br>
-                <li>
-                    <label for="inputText3"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuál es su edad aproximada?
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
-                </li>
-                <br>
-                <li>
-                    <label for="inputText4"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuál es su sexo?
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
-                </li>
-                <br>
-                <li>
-                    <label for="inputText5"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuál es su talla aproximada?
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
-                </li>
-                <br>
-                <li>
-                    <label for="inputText6" class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">Cuéntanos sobre su carácter.
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
-                </li>
-                <br>
-                <li>
-                    <label for="inputText7"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">Cuéntanos un poco de su historia.
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
-                </li>
-                <br>
-                <li>
-                    <label for="inputText8"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Requiere atención o cuidados especiales? ¿Cuáles?
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
-                </li>
-                <br>
-                <input type="submit" value="Actualizar" class="button-p josefinsans-normal-white-20px button-primary">
-            </ul>
-        </form>
     </main>
     <footer text-center>
         <div class="top-footer">
