--- a/adoptionRequestsListShelter.html
+++ b/adoptionRequestsListShelter.html
@@ -27,12 +27,68 @@
                 <a href="adoptionRequestsListShelter.html">
                     <img src="assets/svg/clipboard.svg" class="clipboard" alt="" style="width: 2em;">
                 </a>
-                <button>
+                <button id="toggle-menu">
                     <img src="assets/svg/menu.svg" class="menu" alt="" style="width: 2em;">
                 </button>
             </div>
         </div>
     </header>
+
+    <nav class="container-menu">
+        <button id="close-menu" class="close-menu">
+            <img src="assets/svg/xcircle.svg" class="menu" alt="" style="width: 2em;">
+        </button>
+        <ul class="container-inner-menu">
+            <li>
+                <a href="homeShelter.html">
+                    Inicio
+                </a>
+            </li>
+            <li>
+                <a href="profileShelterEdit.html">
+                    Perfil
+                </a>
+            </li>
+            <li>
+                <a href="adoptionRequestsListShelter.html">
+                    Solicitudes
+                </a>
+            </li>
+            <li>
+                <a href="index.html">
+                    Cerrar sesión
+                </a>
+            </li>
+        </ul>
+    </nav>
+
+    <nav class="container-menu">
+        <button id="close-menu" class="close-menu">
+            <img src="assets/svg/xcircle.svg" class="menu" alt="" style="width: 2em;">
+        </button>
+        <ul class="container-inner-menu">
+            <li>
+                <a href="homeShelter.html">
+                    Inicio
+                </a>
+            </li>
+            <li>
+                <a href="profileShelterEdit.html">
+                    Perfil
+                </a>
+            </li>
+            <li>
+                <a href="adoptionRequestsListShelter.html">
+                    Solicitudes
+                </a>
+            </li>
+            <li>
+                <a href="index.html">
+                    Cerrar sesión
+                </a>
+            </li>
+        </ul>
+    </nav>
 
     <main>
         <div class="top-adoption">
@@ -53,8 +109,9 @@
                 </div>
                 <div class="d-flex flex-column">
                     <p class="josefinsans-chetwode-blue-18px">NOMBRE DEL ADOPTANTE</p>
-                    <p>Victoria Robertson</p>
+                    <a href="profileUser.html">Victoria Robertson</a>
                 </div>
+                <br>
                 <div class="d-flex flex-column">
                     <p class="josefinsans-chetwode-blue-18px">ESTATUS</p>
                     <p>Activa.</p>
@@ -114,6 +171,10 @@
                         veterinario de cabecera?
                     </p>
                     <p>Sí.</p>
+                    <div class="d-flex flex-row justify-content-evenly pb-4">
+                        <button class="button-secondary">Declinar</button>
+                        <button class="button-main">Aceptar</button>
+                    </div>
                 </div>
             </div>
             <button type="button" class="collapsible container-fluid d-flex align-items-center justify-content-between">
@@ -128,8 +189,9 @@
                 </div>
                 <div class="d-flex flex-column">
                     <p class="josefinsans-chetwode-blue-18px">NOMBRE DEL ADOPTANTE</p>
-                    <p>Victoria Robertson</p>
+                    <a href="profileUser.html">Victoria Robertson</a>
                 </div>
+                <br>
                 <div class="d-flex flex-column">
                     <p class="josefinsans-chetwode-blue-18px">ESTATUS</p>
                     <p>Activa.</p>
@@ -189,6 +251,10 @@
                         veterinario de cabecera?
                     </p>
                     <p>Sí.</p>
+                    <div class="d-flex flex-row justify-content-evenly pb-4">
+                        <button class="button-secondary">Declinar</button>
+                        <button class="button-main">Aceptar</button>
+                    </div>
                 </div>
             </div>
             <button type="button" class="collapsible container-fluid d-flex align-items-center justify-content-between">
@@ -203,8 +269,9 @@
                 </div>
                 <div class="d-flex flex-column">
                     <p class="josefinsans-chetwode-blue-18px">NOMBRE DEL ADOPTANTE</p>
-                    <p>Victoria Robertson</p>
+                    <a href="profileUser.html">Victoria Robertson</a>
                 </div>
+                <br>
                 <div class="d-flex flex-column">
                     <p class="josefinsans-chetwode-blue-18px">ESTATUS</p>
                     <p>Activa.</p>
@@ -264,6 +331,10 @@
                         veterinario de cabecera?
                     </p>
                     <p>Sí.</p>
+                    <div class="d-flex flex-row justify-content-evenly pb-4">
+                        <button class="button-secondary">Declinar</button>
+                        <button class="button-main">Aceptar</button>
+                    </div>
                 </div>
             </div>
             <button type="button" class="collapsible container-fluid d-flex align-items-center justify-content-between">
@@ -278,8 +349,9 @@
                 </div>
                 <div class="d-flex flex-column">
                     <p class="josefinsans-chetwode-blue-18px">NOMBRE DEL ADOPTANTE</p>
-                    <p>Victoria Robertson</p>
+                    <a href="profileUser.html">Victoria Robertson</a>
                 </div>
+                <br>
                 <div class="d-flex flex-column">
                     <p class="josefinsans-chetwode-blue-18px">ESTATUS</p>
                     <p>Activa.</p>
@@ -339,6 +411,10 @@
                         veterinario de cabecera?
                     </p>
                     <p>Sí.</p>
+                    <div class="d-flex flex-row justify-content-evenly pb-4">
+                        <button class="button-secondary">Declinar</button>
+                        <button class="button-main">Aceptar</button>
+                    </div>
                 </div>
             </div>
         </div>
