--- a/detailPet.html
+++ b/detailPet.html
@@ -28,55 +28,83 @@
                 <a href="favouritePet.html">
                     <img src="assets/svg/heart.svg" class="heart" alt="" style="width: 2em;">
                 </a>
-                <button>
+                <button id="toggle-menu">
                     <img src="assets/svg/menu.svg" class="menu" alt="" style="width: 2em;">
                 </button>
             </div>
         </div>
     </header>
+
+    <nav class="container-menu">
+        <button id="close-menu" class="close-menu">
+            <img src="assets/svg/xcircle.svg" class="menu" alt="" style="width: 2em;">
+        </button>
+        <ul class="container-inner-menu">
+            <li>
+                <a href="index.html">
+                    Inicio
+                </a>
+            </li>
+            <li>
+                <a href="profileUserEdit.html">
+                    Perfil
+                </a>
+            </li>
+            <li>
+                <a href="adoptionRequestsListUser.html">
+                    Solicitudes
+                </a>
+            </li>
+            <li>
+                <a href="index.html">
+                    Cerrar sesión
+                </a>
+            </li>
+        </ul>
+    </nav>
     
     <main>
         <div class="detail-pet">
             <div class="image-pet d-flex justify-content-center align-items-center flex-column pt-1">
                 <img onclick="goBack()" src="assets/svg/arrowleft.svg" alt="" class="arrow-left" style="width: 2.5em;">
-                <img src="assets/img/pexels-rk-jajoria-1189673.jpg" alt="" class="container-fluid">
+                <img src="assets/img/pexels-rk-jajoria-1189673.jpg" alt="" class="container-fluid pet-image">
             </div>
             <div class="pet-text rectangle-background">
                 <div class="info-pet">
-                    <h2 class="josefinsans-normal-black-30px d-flex justify-content-between">Gnocchi</h2>
+                    <h2 class="pet-name josefinsans-normal-black-30px d-flex justify-content-between">Gnocchi</h2>
                     <div class="d-flex flex-column">
                         <div class="main-info d-flex flex-wrap justify-content-between px-5 mx-5">
                             <div class="age">
                                 <p class="josefinsans-chetwode-blue-18px">EDAD</p>
-                                <p>8 meses</p>
+                                <p class="pet-age">8 meses</p>
                             </div>
                             <div class="size">
                                 <p class="josefinsans-chetwode-blue-18px">TALLA</p>
-                                <p>Mediana</p>
+                                <p class="pet-size">Mediana</p>
                             </div>
                             <div class="sex">
                                 <p class="josefinsans-chetwode-blue-18px">SEXO</p>
-                                <p>Macho</p>
+                                <p class="pet-gender">Macho</p>
                             </div>
                         </div>
                         <div class="secondary-info d-flex flex-column justify-content-between px-5 mx-5">
-                            <div>
+                            <!-- <div>
                                 <p class="josefinsans-chetwode-blue-18px">UBICACIÓN</p>
                                 <p>Coyoacán</p>
-                            </div>
+                            </div> -->
                             <div>
                                 <p class="josefinsans-chetwode-blue-18px">DETALLES</p>
-                                <p>Gnocchi es muy juguetón, convive con otros perros. Está ciego de un ojo. Esterilizado
+                                <p class="character-pet">Gnocchi es muy juguetón, convive con otros perros. Está ciego de un ojo. Esterilizado
                                     y con
                                     vacunas al día.</p>
                             </div>
                             <div>
                                 <p class="josefinsans-chetwode-blue-18px">HISTORIA</p>
-                                <p>Gnocchi fue rescatado de la calle.</p>
+                                <p class="story-pet ">Gnocchi fue rescatado de la calle.</p>
                             </div>
                             <div>
                                 <p class="josefinsans-chetwode-blue-18px">NECESIDADES ESPECIALES</p>
-                                <p>Espacios amplios.</p>
+                                <p class="special-needs">Espacios amplios.</p>
                             </div>
                         </div>
                         <div class="user-actions d-inline-flex flex-row justify-content-evenly">
@@ -174,7 +202,7 @@
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
     </script>
     <script src="js/main.js"></script>
+    <script src="js/detailPet.js"></script>
 
 </body>
-
 </html>
