--- a/detailPetShelter.html
+++ b/detailPetShelter.html
@@ -28,12 +28,40 @@
                 <a href="adoptionRequestsListShelter.html">
                     <img src="assets/svg/clipboard.svg" class="clipboard" alt="" style="width: 2em;">
                 </a>
-                <button>
+                <button id="toggle-menu">
                     <img src="assets/svg/menu.svg" class="menu" alt="" style="width: 2em;">
                 </button>
             </div>
         </div>
     </header>
+
+    <nav class="container-menu">
+        <button id="close-menu" class="close-menu">
+            <img src="assets/svg/xcircle.svg" class="menu" alt="" style="width: 2em;">
+        </button>
+        <ul class="container-inner-menu">
+            <li>
+                <a href="homeShelter.html">
+                    Inicio
+                </a>
+            </li>
+            <li>
+                <a href="profileShelterEdit.html">
+                    Perfil
+                </a>
+            </li>
+            <li>
+                <a href="adoptionRequestsListShelter.html">
+                    Solicitudes
+                </a>
+            </li>
+            <li>
+                <a href="index.html">
+                    Cerrar sesión
+                </a>
+            </li>
+        </ul>
+    </nav>
 
     <main>
         <div class="detail-pet">
@@ -96,19 +124,6 @@
                             </form>
                             <a href="adoptionRequest.html">
                                 <button class="button-main">Ver solicitudes</button>
-                            </a>
-                        </div>
-                        <div class="info-shelter py-5 d-flex flex-column">
-                            <p class="px-4 josefinsans-chetwode-blue-18px">
-                                REFUGIO
-                            </p>
-                            <a href="profileShelter.html" class="d-inline-flex container flex-row">
-                                <img src="assets/img/shelterImage.jpg" alt=""
-                                    style="width: 6em; height: 6em;">
-                                <div class="col-12 text-shelter">
-                                    <p>Refugio San Gregorio</p>
-                                    <p class="d-flex flex-wrap">Felipe Carrillo puerto #400, Alberto Zamora, <br> Coyoacán, 04000, CDMX.</p>
-                                </div>
                             </a>
                         </div>
                     </div>
