--- a/formUser.html
+++ b/formUser.html
@@ -25,106 +25,112 @@
                 </a>
             </div>
             <div>
-                <a href="favouritePet.html">
-                    <img src="assets/svg/heart.svg" class="heart" alt="" style="width: 2em;">
-                </a>
-                <button>
-                    <img src="assets/svg/menu.svg" class="menu" alt="" style="width: 2em;">
-                </button>
             </div>
         </div>
     </header>
 
-    <main class="user-form">
+    <main>
         <div class="top-background">
-            <div class="background-orange"></div>
-            <div class="rectangle-background"></div>
+            <div class="rectangle-background container-fluid"></div>
             <div class="close">
-                <img onclick="goBack()" src="assets/svg/xcircle.svg" class="x-circle" alt="">
+                <img onclick="goBack()" src="assets/svg/xcircle.svg" class="x-circle" alt="" style="width: 3em;">
             </div>
         </div>
-
-        <div class="title">
-            <h1 class="josefinsans-normal-black-30px">Completa tu perfil</h1>
+        <div class="user-form">
+            <h1 class="title josefinsans-normal-black-30px text-center py-5">Completa tu perfil</h1>
+            <div class="d-flex justify-content-center align-content-center align-items-center">
+                <form action="" method="" id="form-user">
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputName"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cómo te llamas?
+                        </label>
+                        <input type="given-name"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                            placeholder="Nombre" id="first-name">
+                        <br>
+                        <input type="family-name"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                            placeholder="Apellidos" id="last-name">
+                    </div>
+                    <br>
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputBirthDate"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuándo naciste?
+                        </label>
+                        <input type="text"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue datepicker"
+                            placeholder="Fecha de nacimiento" id="birthdate">
+                    </div>
+                    <br>
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputPhone"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cómo te podemos
+                            contactar?
+                        </label>
+                        <input type="tel"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                            placeholder="Teléfono" id="phone">
+                    </div>
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputOccupation"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿A qué te dedicas?
+                        </label>
+                        <input type="text"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                            placeholder="Ocupación" id="occupation">
+                    </div>
+                    <br>
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputAdress"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Dónde vives?
+                        </label>
+                        <input type="street-address"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                            placeholder="Calle y número" id="street">
+                        <br>
+                        <input type="address-line1"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                            placeholder="Colonia" id="neighbourhood">
+                        <br>
+                        <input type="address-line2"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                            placeholder="Municipio/Delegación" id="city">
+                        <br>
+                        <input type="address-line3"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                            placeholder="Estado" id="state">
+                        <br>
+                        <input type="postal-code"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                            placeholder="Código postal" id="zip-code">
+                    </div>
+                    <br>
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputDescription"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap"> ¿Por qué deseas
+                            adoptar?
+                        </label>
+                        <input type="text"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue" id="story">
+                    </div>
+                    <br>
+                    <div>
+                        <div class="d-flex flex-row align-items-center">
+                            <input type="checkbox" class="" id="checkbox-form">
+                            <label for="checkbox-form" class="josefinsans-normal-chetwode-blue-20px px-3">He leído y
+                                acepto los
+                                términos
+                                y condiciones de uso.
+                            </label>
+                        </div>
+                        <div class="d-flex justify-content-center">
+                            <input type="submit" value="Ingresar"
+                                class="button-p josefinsans-normal-white-20px button-primary">
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
-
-        <form action="" method="" class="group-form" id="adoption-form">
-            <ul class="d-flex align-content-center flex-column align-items-center justify-content-center">
-                <li>
-                    <label for="inputName"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cómo te llamas?
-                    </label>
-                    <input type="given-name"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                        placeholder="Nombre">
-                    <br>
-                    <input type="family-name"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                        placeholder="Apellidos">
-                </li>
-                <br>
-                <li>
-                    <label for="inputBirthDate"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuándo naciste?
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue datepicker"
-                        placeholder="Fecha de nacimiento" />
-                </li>
-                <br>
-                <li>
-                    <label for="inputPhone"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cómo te podemos
-                        contactar?
-                    </label>
-                    <input type="tel"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                        placeholder="Teléfono">
-                </li>
-                <br>
-                <li>
-                    <label for="inputAdress"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Dónde vives?
-                    </label>
-                    <input type="street-address"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                        placeholder="Calle y número">
-                    <br>
-                    <input type="address-line1"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                        placeholder="Colonia">
-                    <br>
-                    <input type="address-line2"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                        placeholder="Municipio/Delegación">
-                    <br>
-                    <input type="address-line3"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                        placeholder="Estado">
-                    <br>
-                    <input type="postal-code"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                        placeholder="Código postal">
-                </li>
-                <br>
-                <li>
-                    <label for="inputDescription"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap"> ¿Por qué deseas adoptar?
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
-                </li>
-                <br>
-                <li class="checkbox-form">
-                    <input type="checkbox" class="overlap-group" id="checkbox-form">
-                    <label for="inputText12" class="josefinsans-normal-chetwode-blue-20px">He leído y acepto los
-                        términos
-                        y condiciones de uso.
-                    </label>
-                </li>
-                <input type="submit" value="Ingresar" class="button-p josefinsans-normal-white-20px button-primary">
-            </ul>
-        </form>
     </main>
     <footer text-center>
         <div class="top-footer">
@@ -185,8 +191,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
     </script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/formUser.js"></script>
 </body>
 
 </html>
