--- a/index.html
+++ b/index.html
@@ -34,12 +34,40 @@
                 <a href="favouritePet.html">
                     <img src="assets/svg/heart.svg" class="heart" alt="" style="width: 2em;">
                 </a>
-                <button>
+                <button id="toggle-menu">
                     <img src="assets/svg/menu.svg" class="menu" alt="" style="width: 2em;">
                 </button>
             </div>
         </div>
     </header>
+
+    <nav class="container-menu">
+        <button id="close-menu" class="close-menu">
+            <img src="assets/svg/xcircle.svg" class="menu" alt="" style="width: 2em;">
+        </button>
+        <ul class="container-inner-menu">
+            <li>
+                <a href="index.html">
+                    Inicio
+                </a>
+            </li>
+            <li>
+                <a href="profileUserEdit.html">
+                    Perfil
+                </a>
+            </li>
+            <li>
+                <a href="adoptionRequestsListUser.html">
+                    Solicitudes
+                </a>
+            </li>
+            <li>
+                <a href="index.html">
+                    Cerrar sesión
+                </a>
+            </li>
+        </ul>
+    </nav>
 
     <main>
         <div class="welcome">
@@ -50,7 +78,6 @@
             </a>
         </div>
         <div class="finder quicksand-medium-white-14px d-flex justify-content-around">
-            <a href="">
                 <div class="text-center">
                     <a href="searchDog.html">
                         <span class="find">Buscar un</span>
@@ -58,8 +85,6 @@
                         <span class="pet">perro</span>
                     </div>
                     </a>
-            </a>
-            <a href="">
                 <div class="text-center find-cat">
                     <a href="searchCat.html">
                         <span class="find">Buscar un</span>
@@ -67,7 +92,6 @@
                         <span class="pet">gato</span>
                     </a>
                 </div>
-            </a>
         </div>
 
         <div class="pets-anounce text-center">
