--- a/petsListPerShelter.html
+++ b/petsListPerShelter.html
@@ -12,11 +12,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Quicksand:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <title>Pawchontli 🐶🐱 || Buscar un gato</title>
+    <title>Pawchontli 🐶🐱 || Mascota por refugio</title>
 </head>
 
 <body>
-
     <header>
         <div class="nav-bar d-flex flex-row align-items-center justify-content-between px-3">
             <div>
@@ -67,31 +66,7 @@
         <div class="top">
             <div class="background-orange">
             </div>
-            <img src="assets/svg/location.svg" alt="" class="location">
-            <p class="josefinsans-normal-white-30px">Código postal</p>
-        </div>
-        <div class="filter-options">
-            <div class="d-flex flex-row align-items-center justify-content-center pb-4">
-                <a href="">
-                    <button class="button-filter josefinsans-normal-chetwode-blue-16px border-2px-chetwode-blue">
-                        <img src="assets/svg/filter.svg" alt="" style="width: 3em;">
-                        Filtrar
-                    </button>
-                </a>
-                <a href="">
-                    <button class="button-filter josefinsans-normal-chetwode-blue-16px border-2px-chetwode-blue">Ordenar
-                        por</button>
-                </a>
-            </div>
-            <div class="d-flex flew-row justify-content-center align-items-center">
-                <div class="pet-tag">
-                    <p class="text-tag josefinsans-normal-white-16px">Cachorros</p>
-                    <img src="assets/svg/delete.svg" alt="" style="height: 1em; width: 1em;">
-                </div>
-                <a href="">
-                    <button class="delete-all">Borrar todos</button>
-                </a>
-            </div>
+            <h1 class="josefinsans-normal-white-30px">Mascotas de Refugio San Gregorio</h1>
         </div>
         <div class="search-pet d-flex flex-wrap pt-1">
             <div class="card" style="width: 20rem;">
@@ -101,7 +76,7 @@
                     </path>
                 </svg>
                 <a href="detailPet.html">
-                    <img class="card-img-top" src="assets/img/gato_1.jpg" alt="Pet">
+                    <img class="card-img-top" src="assets/img/perro_2.jpg" alt="Pet">
                 </a>
                 <div class="card-body">
                     <a href="">
@@ -117,7 +92,7 @@
                     </path>
                 </svg>
                 <a href="">
-                    <img class="card-img-top" src="assets/img/gato_10.jpg" alt="Pet">
+                    <img class="card-img-top" src="assets/img/perro_6.jpg" alt="Pet">
                 </a>
                 <div class="card-body">
                     <a href="">
@@ -133,7 +108,7 @@
                     </path>
                 </svg>
                 <a href="">
-                    <img class="card-img-top" src="assets/img/gato_13.jpg" alt="Pet">
+                    <img class="card-img-top" src="assets/img/gato_1.jpg" alt="Pet">
                 </a>
                 <div class="card-body">
                     <a href="">
@@ -149,7 +124,7 @@
                     </path>
                 </svg>
                 <a href="">
-                    <img class="card-img-top" src="assets/img/gato_16.jpg" alt="Pet">
+                    <img class="card-img-top" src="assets/img/gato_5.jpg" alt="Pet">
                 </a>
                 <div class="card-body">
                     <a href="">
@@ -167,7 +142,7 @@
                     </path>
                 </svg>
                 <a href="">
-                    <img class="card-img-top" src="assets/img/gato_18.jpg" alt="Pet">
+                    <img class="card-img-top" src="assets/img/perro_2.jpg" alt="Pet">
                 </a>
                 <div class="card-body">
                     <a href="">
@@ -184,7 +159,7 @@
                 </svg>
                 <a href="">
                     <a href="">
-                        <img class="card-img-top" src="assets/img/gato_20.jpg" alt="Pet">
+                        <img class="card-img-top" src="assets/img/perro_6.jpg" alt="Pet">
                     </a>
                 </a>
                 <div class="card-body">
@@ -200,7 +175,7 @@
                         d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
                     </path>
                 </svg>
-                <img class="card-img-top" src="assets/img/gato_5.jpg" alt="Pet">
+                <img class="card-img-top" src="assets/img/gato_1.jpg" alt="Pet">
                 <div class="card-body">
                     <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Jacinta</p>
                 </div>
@@ -213,7 +188,7 @@
                     </path>
                 </svg>
                 <a href="">
-                    <img class="card-img-top" src="assets/img/gato_9.jpg" alt="Pet">
+                    <img class="card-img-top" src="assets/img/gato_5.jpg" alt="Pet">
                 </a>
                 <div class="card-body">
                     <a href="">
@@ -222,21 +197,6 @@
                 </div>
             </div>
         </div>
-
-        <div class="publicity text-center container-fluid">
-            <h1 class="josefinsans-normal-white-30px">Anuncio</h1>
-            <div class="actions">
-                <p class="quicksand-regular-white-20px">
-                    Consequat velit qui adipisicing sunt do reprehenderit ad laborum tempor ullamco exercitation.
-                </p>
-                <a href="" class="d-flex justify-content-center">
-                    <button class="button-white josefinsans-normal-porsche-25px">
-                        Click me
-                    </button>
-                </a>
-            </div>
-        </div>
-
         <div class="search-pet d-flex flex-wrap pt-4">
             <div class="card" style="width: 20rem;">
                 <svg class="ico" viewBox="0 0 24 24" style="width: 3em; height: 3em">
@@ -244,7 +204,7 @@
                         d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
                     </path>
                 </svg>
-                <img class="card-img-top" src="assets/img/gato_3.jpg" alt="Pet">
+                <img class="card-img-top" src="assets/img/perro_2.jpg" alt="Pet">
                 <div class="card-body">
                     <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Apolo</p>
                 </div>
@@ -256,7 +216,7 @@
                         d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
                     </path>
                 </svg>
-                <img class="card-img-top" src="assets/img/gato_4.jpg" alt="Pet">
+                <img class="card-img-top" src="assets/img/perro_6.jpg" alt="Pet">
                 <div class="card-body">
                     <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Capitán</p>
                 </div>
@@ -268,7 +228,7 @@
                         d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
                     </path>
                 </svg>
-                <img class="card-img-top" src="assets/img/gato_7.jpg" alt="Pet">
+                <img class="card-img-top" src="assets/img/gato_1.jpg" alt="Pet">
                 <div class="card-body">
                     <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Jacinta</p>
                 </div>
@@ -280,7 +240,7 @@
                         d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
                     </path>
                 </svg>
-                <img class="card-img-top" src="assets/img/gato_13.jpg" alt="Pet">
+                <img class="card-img-top" src="assets/img/gato_5.jpg" alt="Pet">
                 <div class="card-body">
                     <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Lucy</p>
                 </div>
