--- a/searchDog.html
+++ b/searchDog.html
@@ -27,12 +27,40 @@
                 <a href="favouritePet.html">
                     <img src="assets/svg/heart.svg" class="heart" alt="" style="width: 2em;">
                 </a>
-                <button>
+                <button id="toggle-menu">
                     <img src="assets/svg/menu.svg" class="menu" alt="" style="width: 2em;">
                 </button>
             </div>
         </div>
     </header>
+
+    <nav class="container-menu">
+        <button id="close-menu" class="close-menu">
+            <img src="assets/svg/xcircle.svg" class="menu" alt="" style="width: 2em;">
+        </button>
+        <ul class="container-inner-menu">
+            <li>
+                <a href="index.html">
+                    Inicio
+                </a>
+            </li>
+            <li>
+                <a href="profileUserEdit.html">
+                    Perfil
+                </a>
+            </li>
+            <li>
+                <a href="adoptionRequestsListUser.html">
+                    Solicitudes
+                </a>
+            </li>
+            <li>
+                <a href="index.html">
+                    Cerrar sesión
+                </a>
+            </li>
+        </ul>
+    </nav>
 
     <main>
         <div class="top">
