--- a/searchPet.html
+++ b/searchPet.html
@@ -27,12 +27,67 @@
                 <a href="favouritePet.html">
                     <img src="assets/svg/heart.svg" class="heart" alt="" style="width: 2em;">
                 </a>
-                <button>
+                <button id="toggle-menu">
                     <img src="assets/svg/menu.svg" class="menu" alt="" style="width: 2em;">
                 </button>
             </div>
         </div>
     </header>
+
+    <nav class="container-menu">
+        <button id="close-menu" class="close-menu">
+            <img src="assets/svg/xcircle.svg" class="menu" alt="" style="width: 2em;">
+        </button>
+        <ul class="container-inner-menu">
+            <li>
+                <a href="index.html">
+                    Inicio
+                </a>
+            </li>
+            <li>
+                <a href="profileUserEdit.html">
+                    Perfil
+                </a>
+            </li>
+            <li>
+                <a href="adoptionRequestsListUser.html">
+                    Solicitudes
+                </a>
+            </li>
+            <li>
+                <a href="index.html">
+                    Cerrar sesión
+                </a>
+            </li>
+        </ul>
+    </nav>
+
+    <nav class="container-filter">
+        <button id="close-menu" class="close-menu">
+            <img src="assets/svg/xcircle.svg" class="menu" alt="" style="width: 2em;">
+        </button>
+        <div class="container-inner-filter">
+            <div>
+                <img src="" alt="">
+                <p>Perros</p>
+                <img src="" alt="">
+                <p>Gatos</p>
+            </div>
+            <div>
+                <p>Edad</p>
+                <div>Cualquiera</div>
+            </div>
+            <div>
+                <p>Tamaño</p>
+                <div>Cualquiera</div>
+            </div>
+            <div>
+                <p>Sexo</p>
+                <div>Cualquiera</div>
+            </div>
+        </div>
+        <button>Filtrar </button>
+    </nav>
 
     <main>
         <div class="top">
@@ -44,7 +99,7 @@
         <div class="filter-options">
             <div class="d-flex flex-row align-items-center justify-content-center pb-4">
                 <a href="">
-                    <button class="button-filter josefinsans-normal-chetwode-blue-16px border-2px-chetwode-blue">
+                    <button id="toggle-filter" class="button-filter josefinsans-normal-chetwode-blue-16px border-2px-chetwode-blue">
                         <img src="assets/svg/filter.svg" alt="" style="width: 3em;">
                         Filtrar
                     </button>
